--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -58,14 +58,12 @@ jobs:
           - id: integration
             run_cmd: "pytest -rs -v -m integration"
           # each example gets its own matrix entry
-          - id: basic
-            run_cmd: "python examples/basic.py"
+          - id: start_here
+            run_cmd: "python examples/start_here.py"
           - id: plan_and_execute
             run_cmd: "python examples/plan_and_execute.py"
           - id: move_multiple_robots
             run_cmd: "python examples/move_multiple_robots.py"
-          - id: selection_motion_group_activation
-            run_cmd: "python examples/selection_motion_group_activation.py"
           - id: multi_step_movement_with_collision_free
             run_cmd: "python examples/multi_step_movement_with_collision_free.py"
           - id: run_wandelscript_file
