--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.11, <3.13"
 readme = "README.md"
 dependencies = [
     "httpx>=0.28.0,<0.29",
-    "wandelbots_api_client~=25.8.0",
+    "wandelbots-api-client~=25.6",
     "websockets~=15.0",
     "loguru>=0.7.2,<0.8",
     "pydantic>=2.11.4,<3",
