fix(NDX-374): fix due to failing pipeline

--- a/examples/your-nova-app/.vscode/launch.json
+++ b/examples/your-nova-app/.vscode/launch.json
@@ -5,10 +5,32 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Module",
+            "name": "Register Program",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "python -m your_nova_app",
+            "cwd": "${workspaceFolder}",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
-            "module": "your_nova_app"
-        }
+            "program": "${file}",
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "justMyCode": true
+        },
+        {
+            "name": "Python Debugger: Run Module",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "your_nova_app",
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "justMyCode": true
+        },
     ]
 }
