--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,7 +122,7 @@ show_error_context = true
 warn_unused_ignores = true
 strict_equality = true
 mypy_path = ".mypy_stubs"
-files = "nova, examples, tests, wandelscript, novax"
+files = "nova, examples, tests, wandelscript, novax, nova_rerun_bridge"
 exclude = [
     "wandelscript/grammar",
     "wandelscript/motions.py",
