--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -26,9 +26,9 @@ jobs:
           GITHUB_RUN_ID: ${{ github.run_id }}
         ## TODO: move to uv script
         run: |
-          pip install requests
-          pip install loguru
-          python ./scripts/create_nova_instance.py
+          pip install uv
+          uv sync --extra "nova-rerun-bridge" --extra "wandelscript" --extra "novax"
+          uv run python ./scripts/create_nova_instance.py
           if $? -ne 0; then
             echo "Failed to create NOVA instance."
             exit 1
