update .env template

--- a/.env.template
+++ b/.env.template
@@ -1,24 +1,17 @@
-LOG_LEVEL=INFO
 # The endpoint where the API is reachable from the container serving the Application.
-NOVA_API="http://api-gateway.wandelbots.svc.cluster.local:8080"
+# If you are using Wandelbots Nova in IPC or virtual machine, set the API address accordingly.
+# Always include the protocol (http:// or https://).
+NOVA_API="https://xxxxxx.instance.wandelbots.io"
+
+# The access token provided by the Wandelbots dev portal.
+# Do not set this value if you are using Nova in an 
+# IPC or virtual machine where no authentication is required.
+NOVA_ACCESS_TOKEN="..."
+
 # The name of the cell to be used for the Application.
 CELL_NAME="cell"
-
-# Using username/password authentication
-NOVA_USERNAME="my_username"
-NOVA_PASSWORD="my_password"
-# NOVA_ACCESS_TOKEN="" # Leave empty if not using token-based authentication
-
-# Using token-based authentication (comment out username/password lines)
-# NOVA_ACCESS_TOKEN="eyJhbGciOi..."
-
-# Request your Auth0 credentials from support@wandelbots.com to automate the authentication process
-# NOVA_AUTH0_DOMAIN=""
-# NOVA_AUTH0_CLIENT_ID=""
-# NOVA_AUTH0_AUDIENCE=""
 
 # Configure logger
 # LOG_LEVEL="INFO"
 # LOG_FORMAT="%(asctime)s [%(levelname)s] %(name)s: %(message)s",
-# LOGGER_NAME="wandelbots-nova"
 # LOG_DATETIME_FORMAT="%Y-%m-%d %H:%M:%S"
