--- a/.github/workflows/nova-run-examples.yaml
+++ b/.github/workflows/nova-run-examples.yaml
@@ -77,8 +77,9 @@ jobs:
             run_cmd: "python examples/run_wandelscript_file.py"
           - id: welding
             run_cmd: "python examples/welding.py"
-          - id: collision_setup
-            run_cmd: "python examples/collision_setup.py"
+          # TODO: starting rerun in the CI is flaky
+          # - id: collision_setup
+          #   run_cmd: "python examples/collision_setup.py"
     steps:
       - name: Check out repository
         uses: actions/checkout@v6
