--- a/.github/workflows/push_nova_rerun_bridge_image.yaml
+++ b/.github/workflows/push_nova_rerun_bridge_image.yaml
@@ -1,16 +1,19 @@
 ---
-name: "nova-rerun-bridge: Docker Build Nova Rerun Bridge"
+name: "@wandelbots/nova-rerun-bridge: Docker Build Nova Rerun Bridge"
+
 on:
   workflow_run:
     workflows:
-      - "Nova SDK: Release package"
+      - "@wandelbots/wandelbots-nova: Release package"
     types:
       - completed
     branches:
       - main
+
 env:
   REGISTRY: wandelbots.azurecr.io
   IMAGE_NAME: nova-apps/nova-rerun-bridge
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,15 +21,18 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v6
+
       - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
+
       - name: Download Robot Models
         run: |
           uv sync --extra "nova-rerun-bridge"
           uv run download-models
+
       - name: Create and populate nova_rerun_bridge_app directory
         run: |
           # Create temp directory
@@ -58,13 +64,16 @@ jobs:
           # Move to final destination
           mv temp_build/* nova_rerun_bridge/nova_rerun_bridge_app/
           rm -rf temp_build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Get version from pyproject.toml
         id: version
         run: |
           version=$(grep '^version = ' nova_rerun_bridge/nova_rerun_bridge_app/pyproject.toml | cut -d'"' -f2)
           echo "version=$version" >> $GITHUB_OUTPUT
+
       - name: Login to Azure Container Registry
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
@@ -72,6 +81,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.PUBLIC_REGISTRY_CI_SCOPE_NOVA_APPS_USERNAME }}
           password: ${{ secrets.PUBLIC_REGISTRY_CI_SCOPE_NOVA_APPS_TOKEN }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v6
@@ -84,12 +94,14 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
       - name: Verify Image
         if: github.ref != 'refs/heads/main'
         run: |
           echo "Checking built image..."
           echo "Version: ${{ steps.version.outputs.version }}"
           docker images | grep ${{ env.IMAGE_NAME }}
+
       - name: Update Catalog Entry
         if: steps.version.outputs.version != ''
         env:
