--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -1,16 +1,19 @@
 ---
-name: "nova-rerun-bridge: Docker Build Rerun"
+name: "@wandelbots/nova-rerun-bridge: Docker Build Rerun"
+
 on:
   workflow_run:
     workflows:
-      - "Nova SDK: Release package"
+      - "@wandelbots/wandelbots-nova: Release package"
     types:
       - completed
     branches:
       - main
+
 env:
   REGISTRY: wandelbots.azurecr.io
   IMAGE_NAME: nova-apps/rerun
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,8 +21,9 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v6
+
       - name: Create and populate rerun_app directory
         run: |
           # Create temp directory
@@ -53,11 +57,13 @@ jobs:
           rm -rf temp_build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Get version from pyproject.toml
         id: version
         run: |
           version=$(grep '^version = ' nova_rerun_bridge/rerun_app/pyproject.toml | cut -d'"' -f2)
           echo "version=$version" >> $GITHUB_OUTPUT
+
       - name: Login to Azure Container Registry
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
@@ -65,6 +71,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.PUBLIC_REGISTRY_CI_SCOPE_NOVA_APPS_USERNAME }}
           password: ${{ secrets.PUBLIC_REGISTRY_CI_SCOPE_NOVA_APPS_TOKEN }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v6
@@ -77,12 +84,14 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
       - name: Verify Image
         if: github.ref != 'refs/heads/main'
         run: |
           echo "Checking built image..."
           echo "Version: ${{ steps.version.outputs.version }}"
           docker images | grep ${{ env.IMAGE_NAME }}
+
       - name: Update Catalog Entry
         if: steps.version.outputs.version != ''
         env:
