--- a/.github/workflows/nova-dev.yaml
+++ b/.github/workflows/nova-dev.yaml
@@ -39,4 +39,4 @@ jobs:
         run: uv run mypy
 
       - name: Run tests
-        run: PYTHONPATH=. uv run pytest -rs -v -m "not integration"
+        run: PYTHONPATH=. LOG_LEVEL=WARNING uv run pytest -rs -v -m "not integration"
