--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,5 +18,5 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     open-pull-requests-limit: 10
