--- a/.github/workflows/nova-dev.yaml
+++ b/.github/workflows/nova-dev.yaml
@@ -13,11 +13,9 @@ jobs:
       PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
       CELL_NAME: cell
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v6
 
-      - name: Set up Python
-        uses: actions/setup-python@v6
+      - uses: actions/setup-python@v6
         with:
           python-version: "3.11"
 
