--- a/.github/workflows/pip-audit.yaml
+++ b/.github/workflows/pip-audit.yaml
@@ -27,4 +27,4 @@ jobs:
       - name: Audit dependencies
         uses: pypa/gh-action-pip-audit@v1.1.0
         with:
-          inputs: nova/
+          inputs: ./
